# short_cli

./: .gitignore  Cargo.toml  README.md
assets/: slides.md
src/: inputs.rs  main.rs  utils.rs  web.rs
