[package]
name = "nshrt"
version = "0.3.0"
edition = "2021"
license = "MIT"
keywords = ["url", "shortener", "cli", "rust"]
readme = "README.md"
authors = ["Ishan Joshi <noobscience@duck.com>"]
description = "A simple CLI written in Rust to shorten URLs using my own URL shortener"
repository = "https://github.com/newtoallofthis123/short_cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = {version = "0.6.2"}
bunt = {version = "0.2.8"}
clap = {version = "4.3.23", features = ["derive"]}
regex = {version = "1.9.3"}
serde = {version = "1.0.185"}
serde_json = {version = "1.0.105"}
reqwest = {version = "0.11.19", features = ["json"]}
tokio = {version = "1.32.0", features = ["full"]}
indicatif = {version = "0.17.6"}
clipboard = { version = "0.5.0"}
figlet-rs = {version = "0.1.5"}
human-panic = "1.1.5"
sha2 = { version = "0.10.7", default-features = false }